--- a/web/app/pages/home/template.hbs
+++ b/web/app/pages/home/template.hbs
@@ -1,5 +1,5 @@
 <document>
-	<stackTemplate theme="light">
+	<stackTemplate theme="black">
 		<collectionList>
 			<shelf>
 				<header><title>Popular Movies</title></header>
