Aggiunto support video per i film

--- a/web/app/shared/templates/descriptive.hbs
+++ b/web/app/shared/templates/descriptive.hbs
@@ -1,5 +1,5 @@
 <document>
-	<descriptiveAlertTemplate>
+	<descriptiveAlertTemplate theme="dark" class="darkBackgroundColor">
 		<description>{{ message }}</description>
 	</descriptiveAlertTemplate>
 </document>
