--- a/web/app/shared/templates/error.hbs
+++ b/web/app/shared/templates/error.hbs
@@ -1,5 +1,5 @@
 <document>
-	<descriptiveAlertTemplate>
+	<descriptiveAlertTemplate theme="dark" class="darkBackgroundColor">
 		<title>{{ title }}</title>
 		<description>{{ message }}</description>
 	</descriptiveAlertTemplate>
