--- a/web/app/shared/templates/loader.hbs
+++ b/web/app/shared/templates/loader.hbs
@@ -1,5 +1,5 @@
 <document>
-	<loadingTemplate>
+	<loadingTemplate theme="dark" class="darkBackgroundColor">
 		<activityIndicator>
 			<title>{{ message }}</title>
 		</activityIndicator>
