Aggiunto support per generi alla sezione film

--- a/web/app/assets/css/app.css
+++ b/web/app/assets/css/app.css
@@ -21,7 +21,7 @@
 }
 .text-highlight-primary {
     tv-text-style: none;
-    color: #ff2222;
+    color: #ffffff;
     font-size: 38;
     tv-highlight-color: #ff2222;
 }
